@@ -19,13 +19,13 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "MDAnalysis"
 dynamic = ['version', 'readme']
-license = {file = "LICENSE"}
+license = { file = "LICENSE" }
 description = "An object-oriented toolkit to analyze molecular dynamics trajectories."
 authors = [
-    {name = 'MDAnalysis Development Team', email = 'mdanalysis@numfocus.org'}
+    { name = 'MDAnalysis Development Team', email = 'mdanalysis@numfocus.org' },
 ]
 maintainers = [
-    {name = 'MDAnalysis Core Developers', email = 'mdanalysis@numfocus.org'}
+    { name = 'MDAnalysis Core Developers', email = 'mdanalysis@numfocus.org' },
 ]
 requires-python = ">=3.10"
 dependencies = [
@@ -45,8 +45,14 @@ dependencies = [
     'mdahole2',
 ]
 keywords = [
-    "python", "science", "chemistry", "biophysics", "molecular-dynamics",
-    "computational-chemistry", "molecular-simulation", "analysis",
+    "python",
+    "science",
+    "chemistry",
+    "biophysics",
+    "molecular-dynamics",
+    "computational-chemistry",
+    "molecular-simulation",
+    "analysis",
     "trajectory-analysis",
 ]
 classifiers = [
@@ -77,7 +83,7 @@ extra_formats = [
     "pyedr>=0.7.0",
     "pytng>=0.2.3",
     "gsd>3.0.0",
-    "rdkit>=2021.09.1",
+    "rdkit>=2022.09.1",
 ]
 analysis = [
     "biopython>=1.80",
@@ -118,6 +124,4 @@ zip-safe = false
 find = {}
 
 [tool.setuptools.package-data]
-MDAnalysis = [
-    'analysis/data/*.npy',
-]
+MDAnalysis = ['analysis/data/*.npy']
